--- a/sass/blocks/page-header.scss
+++ b/sass/blocks/page-header.scss
@@ -10,6 +10,7 @@
   .page-header__logo {
     background-color: #242424;
     padding: 24px;
+    min-width: 320px;
     img {
       width: 226px;
       height: 30px;
