--- a/sass/style.scss
+++ b/sass/style.scss
@@ -22,3 +22,9 @@
 
 @import "blocks/modal-login";
 @import "blocks/modal";
+
+
+@media (min-resolution: 144dpi),
+       (min-resolution: 1.5dppx) {
+
+}
