--- a/sass/blocks/reviews.scss
+++ b/sass/blocks/reviews.scss
@@ -232,7 +232,8 @@
     top: 0;
       img {
         width: 248px;
-        height: 160px;
+        height: 158px;
+        border: none;
         border-radius: 0;
         border-right: 1px solid #e5ddd5;
       }
