--- a/css/style.css
+++ b/css/style.css
@@ -825,6 +825,15 @@ img {
   .modal-login__remember input {
     display: none; }
 
+.form label input:checked + .checkbox-indicator,
+.form label input:checked + .radio-indicator {
+  border-color: #d5c9bd; }
+
+.form label input:checked + .checkbox-indicator::before,
+.form label input:checked + .radio-indicator::before {
+  visibility: visible;
+  opacity: 1; }
+
 .modal-login__restore {
   width: 40%;
   text-align: right;
